<resources>
    <string name="app_name">Just Java</string>
    <string name="order_name">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="add_cream">Whipped Cream (+$1.00)</string>
    <string name="add_chocolate">Chocolate (+$1.00)</string>
    <string name="quantity_header">Quantity</string>
    <string name="order_button">Order</string>
    <string name="reset_button">Reset</string>
    <string name="summary_header">Summary</string>
    <string name="error_cannot_order_zero">You cannot order 0 cups of coffee!</string>
    <string name="error_maximum_ten">We only allow a maximum order of 10 cups per customer!</string>
    <string name="orders_reset">Orders reset!</string>
</resources>
